# Doubleater

./: .gitignore  CMakeLists.txt  LICENSE  README.rst
.github/workflows/: cmake-single-platform.yml
docs/: setup.md
docs/Developer_functions/: DevFuncs.cpp
include/: FuncHelper.h  FwManager.h  Options.h  SHA256.h
scripts/: ips.lst  regeditTelemetry.bat  regeditTelemetryON.bat
src/: FuncHelper.cpp  FwManager.cpp  Options.cpp  SHA256.cpp  Source.cpp
